--- a/gestureRecognizeDemo/Base.lproj/Main.storyboard
+++ b/gestureRecognizeDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,66 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="gestureRecognizeDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CqZ-1g-lLs">
+                                <rect key="frame" x="37" y="183.5" width="300" height="300"/>
+                                <subviews>
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DtU-nH-Li8">
+                                        <rect key="frame" x="0.0" y="-0.5" width="300" height="300"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E5Q-VZ-IJn">
+                                        <rect key="frame" x="125" y="125" width="50" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="AX5-IG-2lP"/>
+                                            <constraint firstAttribute="height" constant="50" id="D8T-9d-Q1N"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.37107247110000002" green="0.78863698240000002" blue="0.75805085900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="E5Q-VZ-IJn" firstAttribute="centerX" secondItem="CqZ-1g-lLs" secondAttribute="centerX" id="1QD-u6-Uwz"/>
+                                    <constraint firstAttribute="bottom" secondItem="DtU-nH-Li8" secondAttribute="bottom" id="5k0-0H-qT5"/>
+                                    <constraint firstAttribute="trailing" secondItem="DtU-nH-Li8" secondAttribute="trailing" id="7ah-M9-3kU"/>
+                                    <constraint firstAttribute="height" constant="300" id="ZtE-OK-U0s"/>
+                                    <constraint firstItem="DtU-nH-Li8" firstAttribute="top" secondItem="CqZ-1g-lLs" secondAttribute="top" id="gyl-bV-O68"/>
+                                    <constraint firstItem="E5Q-VZ-IJn" firstAttribute="centerY" secondItem="CqZ-1g-lLs" secondAttribute="centerY" id="tHm-fz-huA"/>
+                                    <constraint firstItem="DtU-nH-Li8" firstAttribute="leading" secondItem="CqZ-1g-lLs" secondAttribute="leading" id="taP-hX-RF3"/>
+                                    <constraint firstAttribute="width" constant="300" id="yXs-NM-HPH"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please swipe the key to unlock App" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2ok-QW-tVC">
+                                <rect key="frame" x="8" y="52" width="359" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="CqZ-1g-lLs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7I3-bu-N6T"/>
+                            <constraint firstItem="2ok-QW-tVC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="9bq-jX-VHd"/>
+                            <constraint firstItem="CqZ-1g-lLs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S79-rA-ZHU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2ok-QW-tVC" secondAttribute="trailing" constant="8" id="eHJ-zw-8ad"/>
+                            <constraint firstItem="2ok-QW-tVC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="y8p-u4-ok1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="SwipipeArea" destination="CqZ-1g-lLs" id="0nb-6b-ynb"/>
+                        <outlet property="bacgroundImageView" destination="DtU-nH-Li8" id="jY6-gW-2oZ"/>
+                        <outlet property="dragViewForPicture" destination="E5Q-VZ-IJn" id="v7H-P4-ZMU"/>
+                        <outlet property="textLabel" destination="2ok-QW-tVC" id="CS0-FZ-Ux4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
